// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter selector with multi selection renders correctly with ariaLabel 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="my label"
    class="form-control dropdown-triggerer"
    value=""
  />
</div>
`;

exports[`Filter selector with multi selection renders correctly with emptyOptioncaption 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-triggerer"
    placeholder="find me"
    value=""
  />
</div>
`;

exports[`Filter selector with multi selection renders correctly with no options 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-triggerer"
    value=""
  />
</div>
`;

exports[`Filter selector with multi selection renders correctly with options 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-triggerer"
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with ariaLabel 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="my label"
    class="form-control dropdown-triggerer"
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with emptyOptioncaption 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-triggerer"
    placeholder="find me"
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with no options 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-triggerer"
    value=""
  />
</div>
`;

exports[`Filter selector with single selection renders correctly with options 1`] = `
<div
  class="dropdown-container"
  data-focusindex="0"
>
  <input
    aria-controls="undefined-dropdown-list"
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-triggerer"
    value=""
  />
</div>
`;
